portfolio img ratio fix

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@ I am always looking for ways to improve and expand my knowledge, and I am excite
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web3">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/benzene_coin.jpeg" width="500" height="600" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/benzene_coin.jpeg"  class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/benzene_coin.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Benzene Coin"><i class="bx bx-plus"></i></a>
                 <a href="https://github.com/maxslimb/BenzeneCoin" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
@@ -302,7 +302,7 @@ I am always looking for ways to improve and expand my knowledge, and I am excite
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web3">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/nft-minter.jpeg" width="500" height="600" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/nft-minter.jpeg"  class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/nft-minter.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="NFT Minter"><i class="bx bx-plus"></i></a>
                 <a href="https://github.com/maxslimb/nft-project" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
