--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Kishan Patel</h1>
-      <p>I'm <span class="typed" data-typed-items="Full Stack Developer, Android Developer, Founder, Tech Speaker"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Full Stack Developer, Android Developer, Founder, Tech Speaker, CS Topper"></span></p>
     </div>
   </section><!-- End Hero -->
 
