removed contact form

--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@ I am always looking for ways to improve and expand my knowledge, and I am excite
 
           </div>
 
-          <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
+          <!-- <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
             <form action="contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="form-group col-md-6">
@@ -462,7 +462,7 @@ I am always looking for ways to improve and expand my knowledge, and I am excite
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
-          </div>
+          </div> -->
 
         </div>
 
