--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Kishan Patel</title>
-  <meta content="" name="description"> <!--TODO -->
+  <meta content="Hello I am Kishan Patel" name="description"> <!--TODO -->
   <meta content="Tech,Android" name="keywords">
 
   <!-- Favicons -->
