--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <title>Kishan Patel</title>
   <meta content="Hello I am Kishan Patel" name="description"> <!--TODO -->
-  <meta content="Tech,Android" name="keywords">
+  <meta content="Full stack developer,Developer,Video Editor,iOS Developer,Android" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon1.png" rel="icon">
@@ -50,7 +50,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/kk4.jpeg" alt="" class="img-fluid rounded-circle"> <!--TODO -->
+        <img src="assets/img/qwewq.jpeg" alt="" class="img-fluid rounded-circle"> <!--TODO -->
         <h1 class="text-light"><a href="index.html">Kishan Patel</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://twitter.com/maxslimb" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -94,7 +94,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/kk3.jpeg" class="img-fluid" alt="">
+            <img src="assets/img/wqqqw.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Grad Student &amp; Full Stack Developer.</h3>
